kubernetes/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: vue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vue

  template:
    metadata:
      labels:
        app: vue
    spec:
      containers:
      - name: frontend
        image: "albertoarostegui/frontend"
        ports:
        - containerPort: 80
