kubernetes/vault-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault-deployment
  labels:
    app: vault
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      volumes:
        - name: vault-storage
          persistentVolumeClaim:
            claimName: pvc-vault
      containers:
      - name: vault
        image: "albertoarostegui/secret-vault"
        ports:
        - containerPort: 8200
        volumeMounts:
          - name: vault-storage
            mountPath: "/vault/file"
