kubernetes/cluster-ip-api.yml
apiVersion: v1
kind: Service
metadata:
  name: cluster-ip-api
  labels:
    app: cluster-ip-api

spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: api
    role: leader
    tier: backend
