kubernetes/cluster-ip-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: cluster-ip-frontend
  labels:
    app: cluster-ip-frontend

spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: vue
    role: leader
    tier: frontend
