kubernetes/cluster-ip-vault.yml
apiVersion: v1
kind: Service
metadata:
  name: cluster-ip-vault
  labels:
    app: cluster-ip-vault

spec:
  type: ClusterIP
  ports:
    - port: 8200
      targetPort: 8200
      protocol: TCP
  selector:
    app: vault
