kubernetes/lb.yml
apiVersion: v1
kind: Service
metadata:
  name: my-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: vue
    role: leader
    tier: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
