kubernetes/load-balancer.yml
apiVersion: v1
kind: Service
metadata:
  name: load-balancer
  labels:
    app: load-balancer
  
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: cluster-ip-frontend
